--- a/TEMPERATURE CONVERTOR/index.html
+++ b/TEMPERATURE CONVERTOR/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Temperature Convertor</title>
+        <title>Temperature Converter</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -11,10 +11,10 @@
             <h1>Temperature Conversion:</h1>
 
             <input type="number" id="textBox" value="0"><br>
-            <input type="radio" id="toFahrenhelt" name="unit">
-            <label for="toFahrenhelt">Celcius-Fahrenhelt</label><br>
-            <input type="radio" id="toCelcius" name="unit">
-            <label for="toCelcius">Fahrenhelt-Celcius</label><br>
+            <input type="radio" id="toFahrenheit" name="unit">
+            <label for="toFahrenheit">Celsius to Fahrenheit</label><br>
+            <input type="radio" id="toCelsius" name="unit">
+            <label for="toCelsius">Fahrenheit to Celsius</label><br>
             <button type="button" onclick="convert()">submit</button>
             <p id="result"></p>
         </form>
